--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "nodejs_blog",
   "version": "1.0.0",
   "description": "Project nodejs-blog",
-  "main": "server.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/tvucic/nodejs-blog#readme",
   "dependencies": {
+    "express": "^4.17.1",
     "lodash": "^4.17.20",
     "nodemon": "^2.0.7"
   }
