Creating and establishing mongoDB connection through .env file

--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   },
   "homepage": "https://github.com/tvucic/nodejs-blog#readme",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "lodash": "^4.17.20",
+    "mongoose": "^5.11.13",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.7"
   }
